--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
   "name": "sandbox",
   "version": "0.0.1",
-  "engines": {
-    "node": "7.1.0",
-    "npm": "3.10.9"
-  },
   "scripts": {
-    "debug": "npm start --inspect",
-    "start": "./node_modules/babel-cli/bin/babel-node.js ./src/index.js",
-    "watch": "./node_modules/babel-watch/babel-watch.js ./src/index.js"
+    "start": "./node_modules/babel-cli/bin/babel.js ./src --out-dir ./dist --source-map",
+    "test": "jest src",
+    "watch": "yarn start -- --watch"
   },
   "dependencies": {
     "ramda": "^0.24.1",
-    "react": "^15.6.1",
     "unirest": "^0.5.1"
   },
   "description": "Area for fights with js",
@@ -20,6 +15,26 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-preset-env": "git+https://github.com/babel/babel-preset-env.git"
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
+    "babel-plugin-syntax-flow": "^6.18.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "eslint": "^4.4.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-config-airbnb-flow": "^1.0.2",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-flowtype-errors": "^3.3.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jest": "^20.0.3",
+    "flow-bin": "0.42.0",
+    "jest": "^20.0.4",
+    "prettier-eslint": "^6.4.2"
+  },
+  "jest": {
+    "verbose": true
   }
 }
