--- a/package.json
+++ b/package.json
@@ -2,18 +2,34 @@
   "name": "sandbox",
   "version": "0.0.1",
   "scripts": {
-    "start": "./node_modules/babel-cli/bin/babel.js ./src --out-dir ./dist --source-map",
+    "browserify": "./node_modules/.bin/browserify ./dist/socketio.js -o ./dist/_socketio.js",
+    "budo": "./node_modules/.bin/budo ./dist/socketio.js --live",
+    "build": "./node_modules/babel-cli/bin/babel.js ./src --out-dir ./dist --source-map --copy-files",
+    "cleanDist": "rm -rf ./dist",
     "test": "jest src",
-    "watch": "yarn start -- --watch"
+    "watch": "yarn build -- --watch",
+    "watch2": "./node_modules/.bin/watchify ./dist/socketio.js -o ./dist/_socketio.js --debug --verbose"
   },
   "dependencies": {
+    "debug": "^3.0.0",
+    "hapi": "^16.5.2",
+    "inert": "^4.2.1",
     "ramda": "^0.24.1",
+    "rxjs": "^5.4.3",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "unirest": "^0.5.1"
   },
   "description": "Area for fights with js",
   "repository": "",
   "license": "MIT",
   "devDependencies": {
+    "utf-8-validate": "^3.0.3",
+    "watchify": "^3.9.0",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
+    "browser-request": "^0.3.3",
+    "budo": "^10.0.4",
+    "bufferutil": "^3.0.2",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
@@ -23,6 +39,9 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
     "eslint": "^4.4.0",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-config-airbnb-flow": "^1.0.2",
